--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00B8D4"
+    android:background="#4DD0E1"
     android:theme="@style/Theme.MaterialComponents"
     tools:context=".MainActivity">
 
