--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".GameActivity">
+    tools:context=".ui.GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,10 +14,11 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/gameFieldSize"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_weight="1"
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="24sp"
@@ -25,9 +26,10 @@
 
         <ImageView
             android:id="@+id/smile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginStart="8dp"
+            android:layout_weight="1"
             android:src="@drawable/cat_wire_smile" />
 
         <Button
@@ -35,6 +37,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:text="@string/save_record"
             android:visibility="visible" />
     </LinearLayout>
@@ -47,6 +50,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
         android:orientation="horizontal">
 
         <TextView
@@ -56,34 +60,7 @@
             android:text="\uD83D\uDCA9" />
 
         <TextView
-            android:id="@+id/scoreIco"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="\uD83D\uDC53" />
-
-        <TextView
             android:id="@+id/minesNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="TextView" />
-
-        <Chronometer
-            android:id="@+id/chronometer2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp" />
-
-        <Button
-            android:id="@+id/restart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:text="@string/settings" />
-
-        <TextView
-            android:id="@+id/flagsNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
@@ -95,6 +72,21 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="\uD83D\uDC31" />
+
+        <TextView
+            android:id="@+id/flagsNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="TextView" />
+
+
+        <TextView
+            android:id="@+id/scoreIco"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="\uD83D\uDC53" />
 
         <TextView
             android:id="@+id/score"
@@ -109,6 +101,20 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="\uD83D\uDD57" />
+
+        <Chronometer
+            android:id="@+id/chronometer2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp" />
+
+        <Button
+            android:id="@+id/restart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="14dp"
+            android:text="@string/settings" />
+
     </LinearLayout>
 
 </LinearLayout>
