--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.GameActivity2">
+    tools:context=".ui.GameActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -41,11 +41,15 @@
             android:text="@string/save_record"
             android:visibility="visible" />
     </LinearLayout>
+<androidx.core.widget.NestedScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TableLayout
         android:id="@+id/gameField"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+</androidx.core.widget.NestedScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
