--- a/app/src/main/res/layout/activity_high_score.xml
+++ b/app/src/main/res/layout/activity_high_score.xml
@@ -10,7 +10,7 @@
         android:id="@+id/highScoreTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="High Score"
+        android:text="@string/high_score"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,48 +30,57 @@
 
             <TextView
                 android:id="@+id/recordNameTitle"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
-                android:text="Name"
+                android:text="@string/name"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView5"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
-                android:text="Field Size"
+                android:text="@string/field_size"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView6"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
-                android:text="Mines"
+                android:text="@string/mines2"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView7"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
-                android:paddingLeft="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
-                android:text="Time"
+                android:text="@string/time"
                 android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/textView8"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
-                android:text="Score"
+                android:text="@string/score"
                 android:textSize="20sp" />
         </TableRow>
 
