--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <TableLayout
         android:layout_width="match_parent"
@@ -13,7 +13,9 @@
 
             <TextView
                 android:id="@+id/winnerName"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
@@ -22,7 +24,9 @@
 
             <TextView
                 android:id="@+id/fSize"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
@@ -31,7 +35,9 @@
 
             <TextView
                 android:id="@+id/minesDisabled"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
@@ -40,7 +46,9 @@
 
             <TextView
                 android:id="@+id/gameTime"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
@@ -49,7 +57,9 @@
 
             <TextView
                 android:id="@+id/getScore"
+                android:layout_width="match_parent"
                 android:layout_weight="1"
+                android:gravity="center"
                 android:paddingStart="8dp"
                 android:paddingTop="8dp"
                 android:paddingEnd="8dp"
